# MVA

./: .gitignore  README.md
ALTEGRAD/: README.md  pyproject.toml
ALTEGRAD/TP1/: Nakache_Eithan.ipynb
ALTEGRAD/TP2/: Lab2_Nakache_Eithan.ipynb  Nakache_Eithan.ipynb
ALTEGRAD/TP3/: Lab3_Nakache_Eithan.ipynb
Deep Learning for Time series/: pyproject.toml
Deep Learning for Time series/TP1/: dlts-tp1.ipynb
