[project]
name = "altegrad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.6",
    "nbformat>=4.2.0",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "plotly>=6.3.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
